--- a/principal/DAAD/DAAD/DAAD/Pages/Navigation/Lobby.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Navigation/Lobby.xaml
@@ -14,7 +14,7 @@
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
             <Button Text="Sobre" Clicked="IrParaSobre"/>
-            <Button Text="CEP" Clicked="IrParaBuscaCep"/>
+            <Button Text="CEP" Clicked="IrParaCep"/>
             <Button Text="Modal" Clicked="ChamarModal"/>
         </StackLayout>
     </ContentPage.Content>
