projeto ficando organizado.

--- a/principal/DAAD/DAAD/DAAD/Pages/Master/Conta.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Master/Conta.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DAAD.Pages.Master.Conteudo"
-             Title="Conteudo">
+             x:Class="DAAD.Pages.Master.Conta"
+             Title="Conta">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Conteudo"
+            <Label Text="Informaçoes da conta do usuario"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Button Text="Modal" Clicked="ModalEdiReg"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
