--- a/principal/DAAD/DAAD/DAAD/Pages/Tabbed/Abas.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Tabbed/Abas.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:nav="clr-namespace:DAAD.Pages.Navigation"
+             xmlns:master="clr-namespace:DAAD.Pages.Master"
              x:Class="DAAD.Pages.Tabbed.Abas">
-    <nav:Lobby />
-    <nav:Sobre />
-    <nav:Cep />
+  <master:Principal />
+  <master:Sobre />
+  <master:Conta />
 </TabbedPage>
