--- a/principal/DAAD/DAAD/DAAD/Pages/Master/Principal.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Master/Principal.xaml
@@ -9,19 +9,21 @@
         <ToolbarItem Text="Ordenar" IconImageSource="internet.png"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-            
-            <StackLayout Spacing="0" Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <BoxView BackgroundColor="Green" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
-                <BoxView BackgroundColor="Blue" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
-            </StackLayout>
+        <ScrollView Orientation="Vertical">
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" HeightRequest="1000">
 
-            <StackLayout Margin="5, 10, 5, 10" Padding="10" Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Button Text="Sobre" Clicked="IrParaSobre"/>
-                <Button Text="CEP" Clicked="IrParaCep"/>
-                <Button Text="Modal" Clicked="ChamarModal"/>
+                <StackLayout Spacing="0" Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <BoxView BackgroundColor="Green" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                    <BoxView BackgroundColor="Blue" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                </StackLayout>
+
+                <StackLayout Margin="5, 10, 5, 10" Padding="10" Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <Button Text="Sobre" Clicked="IrParaSobre"/>
+                    <Button Text="CEP" Clicked="IrParaCep"/>
+                    <Button Text="Modal" Clicked="ChamarModal"/>
+                </StackLayout>
+
             </StackLayout>
-            
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
