mais 3h de estudo e o projeto vai indo.

--- a/principal/DAAD/DAAD/DAAD/Pages/CarouselPages/Inicio3.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/CarouselPages/Inicio3.xaml
@@ -8,7 +8,7 @@
             <Label Text="Nossas funçoes no aplicativo incluem: etc..." FontSize="Medium"
                 
                 HorizontalOptions="CenterAndExpand" />
-            <ImageButton Source="cursor.png" Clicked="MudarPaginaMenu" BackgroundColor="Transparent"/>
+            <ImageButton Source="cursor.png" HeightRequest="100" WidthRequest="100" Clicked="MudarPaginaMenu" BackgroundColor="Transparent"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
