--- a/principal/DAAD/DAAD/DAAD/Pages/Master/Mapa.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Master/Mapa.xaml
@@ -8,7 +8,16 @@
             <StackLayout HeightRequest="1000">
                 <Button Text="GoogleMaps" Clicked="NavGoogleMaps"/>
                 <Button Text="CEP" Clicked="NavCEP"/>
-                <Label Text="aqui vai ficar a lista de postos por proximidade."/>
+                <Label Text="lista de locais" x:Name="local"/>
+                <Picker Title="Postos" SelectedIndexChanged="RotaGoogleMaps">
+                    <Picker.Items>
+                        <x:String>Posto 1</x:String>
+                        <x:String>Posto 2</x:String>
+                        <x:String>Posto 3</x:String>
+                        <x:String>Posto 4</x:String>
+                        <x:String>Posto 5</x:String>
+                    </Picker.Items>
+                </Picker>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
