--- a/principal/DAAD/DAAD/DAAD/Pages/Master/MenuLateral.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Master/MenuLateral.xaml
@@ -15,7 +15,9 @@
                     <Button Text="Principal" BackgroundColor="Transparent" Clicked="MenuPrincipal" />
                     <Button Text="Sobre" BackgroundColor="Transparent" Clicked="MenuSobre" />
                     <Button Text="Depoimentos" BackgroundColor="Transparent" Clicked="MenuDepo" />
+                    <Button Text="Configuração" BackgroundColor="Transparent" Clicked="MenuConfig" />
                     <Button Text="Carregando" BackgroundColor="Transparent" Clicked="MenuCarregando" />
+                    
                 </StackLayout>
             </ScrollView>
         </ContentPage>
