--- a/principal/DAAD/DAAD/DAAD/Pages/Master/Depoimentos.xaml
+++ b/principal/DAAD/DAAD/DAAD/Pages/Master/Depoimentos.xaml
@@ -54,7 +54,7 @@
                                 </StackLayout>
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text=" Depoimento : "/>
-                                    <Label Text="{Binding complemento}"/>
+                                    <Label Text="{Binding depoimento}"/>
                                 </StackLayout>
                             </StackLayout>
                         </ViewCell>
